--- a/gj.yml
+++ b/gj.yml
@@ -15,7 +15,7 @@ $types:
     phone: Number {🛡️IsAuthorized}
     arrayOfNumbers: Number[]
     arrayOfStrings: String[]
-
+    
 $args:
   UserPayload:
     userId: String!
@@ -43,15 +43,11 @@ $resolvers:
     type: User
     args:
       payload: UserPayload
-    resolve: !!js/function >
-      function foobar(root, payload, context, info) {
-        return {
-          "name": "22233",
-          "email": "22",
-          "phone": 2223
-        }
-      }
 
+  findUser3:
+    type: User
+    args:
+      payload: UserPayload
 $views:
   app:
     components:
